Fix book_list.html, add style.css and book_list.css, logo

--- a/p_library/templates/base.html
+++ b/p_library/templates/base.html
@@ -36,7 +36,7 @@
 
             </a>
 
-            <span class="navbar-text">Моя библиотека</span>
+            <span class="navbar-text">My Lib</span>
 
             <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
                     
