--- a/p_library/templates/p_library/book_table.html
+++ b/p_library/templates/p_library/book_table.html
@@ -4,7 +4,7 @@
 
     {% load static %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'css/p_library_list.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/book_table.css' %}">
 
 {% endblock extra_head %}
 
