--- a/p_library/templates/p_library/book_list.html
+++ b/p_library/templates/p_library/book_list.html
@@ -37,7 +37,7 @@
 
             {% for book in object_list %}
 
-                <div class="col-lg-3 col-md-6 col-sm-12">
+                <div class="col-lg-3 col-md-6 col-sm-12 mb-3">
 
                     <div class="card text-center">
 
